// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`profiles GET /api/profiles/:username when the user is authenticated should return a user profile 1`] = `
{
  "body": {
    "profile": {
      "bio": "International Acct.",
      "following": false,
      "image": "//www.gravatar.com/avatar/c6deca3e929fa873a37e05a5e8ef2359",
      "username": "afbi",
    },
  },
  "status": 200,
}
`;

exports[`profiles GET /api/profiles/:username when the user is not authenticated should return a user profile 1`] = `
{
  "body": {
    "profile": {
      "bio": "Investment Banker",
      "following": false,
      "image": "//www.gravatar.com/avatar/e48cdc9b7d413244ad84b2d01ece2641",
      "username": "ewlegge",
    },
  },
  "status": 200,
}
`;

exports[`profiles GET /api/profiles/:username when the username is not found should return a not found error 1`] = `
{
  "body": {
    "errors": {
      "error": {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Not Found",
        "output": {
          "headers": {},
          "payload": {
            "error": "Not Found",
            "message": "Not Found",
            "statusCode": 404,
          },
          "statusCode": 404,
        },
      },
      "message": "Not Found",
    },
  },
  "status": 404,
}
`;
